# softrender

./: CMakeLists.txt  Cargo.toml  Soft Render.cpp  Soft Render.h
.github/workflows/: ci.yml
src/: Buffer.hpp  Engine.hpp  input_manager.rs  main.rs  world.rs
src/renderer/: camera.rs  color.rs  engine.rs  mod.rs  triangle.rs  vertex.rs
